--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -81,3 +81,9 @@
   .bm-item:hover {
     color: #ffffff;
   }
+
+  @media (max-width: 800px){
+    .bm-menu-wrap {
+      width: 100%!important;
+    }
+  }
